# datarade

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
datarade/: __init__.py  git_client.py  models.py  schemas.py  services.py
datarade/abstract_repositories/: __init__.py  dataset_containers.py  datasets.py
datarade/domain/: commands.py  events.py  exceptions.py  models.py
datarade/orm/: __init__.py  git.py
datarade/repositories/: __init__.py  dataset_containers_stateless.py  datasets_git.py
datarade/services/dataset_catalog/: __init__.py  api.py  message_bus.py  services.py  unit_of_work.py
datarade/services/dataset_subscription/: __init__.py  api.py  handlers.py  message_bus.py  unit_of_work.py  utils.py
docs/: conf.py  index.rst  requirements.txt
query_tools/: __init__.py  config.py  datasets.py  endpoints.py  querysets.py
tests/: conftest.py  context.py  fakes.py  infrastructure.py  test_basic.py  test_e2e.py  test_integration.py  test_unit.py
tests/e2e/: auth.py  test_dataset_catalog.py  test_dataset_subscription.py
tests/static_files/: dataset_container.yaml  endpoint.yaml  list_of_tables.sql  list_of_tables.yaml
tests/unit/: fakes_dataset_catalog.py  fakes_dataset_subscription.py  test_dataset_catalog.py
