[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "datarade"
author = "Mike Alfare"
author-email = "alfare@gmail.com"
home-page = "https://github.com/fivestack/datarade"

requires = [
    "marshmallow>=3.4,<4.0",
    "pyyaml>=5.1,<6.0",
    "requests>=2.22,<3.0",
    "azure-devops>=6.0,<7.0",
    "sqlalchemy>=1.3,<2.0",
    "pyodbc>=4.0,<5.0",
    "bcp>=0.3.0"
]
requires-python = ">=3.7,<4.0"
description-file = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Database"
]

keywords = "datarade mssql database data pipeline"

[tool.flit.metadata.requires-extra]
test = [
    "pytest>=5.1,<6.0",
    "pytest-cov>=2.7,<3.0"
]
doc = [
    "sphinx>=2.4,<3.0",
    "sphinx-autodoc-typehints>=1.10,<2.0",
    "sphinx_rtd_theme>=0.4,<0.5"
]
